src/objects/FourPlanning_Area__c.object
<CustomObject>
    <fields>
        <fullName>Conocimiento_del_Area__c</fullName>
        <label>Conocimiento del Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alto</fullName>
                </value>
                <value>
                    <fullName>Medio</fullName>
                </value>
                <value>
                    <fullName>Bajo</fullName>
                </value>
                <value>
                    <fullName>Aún no tengo contacto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FourPlanning_Area_del_Reto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FourPlanning Reto</label>
        <referenceTo>FourPlanning_Reto__c</referenceTo>
        <relationshipLabel>FourPlanning Areas</relationshipLabel>
        <relationshipName>FourPlanning_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FourPlanning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FourPlanning</label>
        <referenceTo>FourPlanning__c</referenceTo>
        <relationshipLabel>FourPlanning Areas</relationshipLabel>
        <relationshipName>FourPlanning_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Numero_de_Area__c</fullName>
        <label>Numero de Area</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Area__c</fullName>
        <label>Tipo de Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comunicaciones</fullName>
                </value>
                <value>
                    <fullName>Sistemas</fullName>
                </value>
                <value>
                    <fullName>Seguridad</fullName>
                </value>
                <value>
                    <fullName>Digitalización</fullName>
                </value>
                <value>
                    <fullName>Transformación</fullName>
                </value>
                <value>
                    <fullName>Financiera</fullName>
                </value>
                <value>
                    <fullName>Área de Negocio</fullName>
                </value>
                <value>
                    <fullName>RRHH</fullName>
                </value>
                <value>
                    <fullName>Bienes e Inmuebles</fullName>
                </value>
                <value>
                    <fullName>Áreas Corporativas</fullName>
                </value>
                <value>
                    <fullName>Producción</fullName>
                </value>
                <value>
                    <fullName>Ninguna de las anteriores</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Titulo_Area__c</fullName>
        <label>Titulo Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>FourPlanning Area</label>
    <nameField>
        <label>Nombre de FourPlanning Area</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FourPlanning Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>